# provider_vision

./: .gitignore  BOOTSTRAP.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  get_started.sh  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-l4t-develop.yml  docker-image-perception-l4t-feature.yml  docker-image-perception-l4t-master.yml  docker-image-perception-master.yml
cfg/: spinnaker_cam.cfg
drivers/arm64/: .install_spinnaker.sh.swp  README_ARM  input  install_spinnaker.sh  libgentl_2.3.0.77_arm64.deb  libspinnaker-c-dev_2.3.0.77_arm64.deb  libspinnaker-c_2.3.0.77_arm64.deb  libspinnaker-dev_2.3.0.77_arm64.deb  libspinvideo-c-dev_2.3.0.77_arm64.deb  libspinvideo-c_2.3.0.77_arm64.deb  libspinvideo-dev_2.3.0.77_arm64.deb  libspinvideo_2.3.0.77_arm64.deb  spinupdate-dev_2.3.0.77_arm64.deb  spinupdate_2.3.0.77_arm64.deb  spinview-qt-dev_2.3.0.77_arm64.deb
drivers/spinnaker/: install_spinnaker.sh  libgentl_2.3.0.77_amd64.deb  libspinnaker-c-dev_2.3.0.77_amd64.deb  libspinvideo-c-dev_2.3.0.77_amd64.deb  spinupdate_2.3.0.77_amd64.deb
drivers/x86/: README  input  install_spinnaker.sh  libspinnaker-c_2.3.0.77_amd64.deb  libspinnaker-dev_2.3.0.77_amd64.deb  libspinvideo-c_2.3.0.77_amd64.deb  libspinvideo-dev_2.3.0.77_amd64.deb  libspinvideo_2.3.0.77_amd64.deb  (+2 more)
launch/: provider_vision.launch
params/: AUV7_params.yaml  AUV8_params.yaml  test_params.yaml
src/: camera.cpp  capture.cpp
(+150 files in other folders)
