<?xml version="1.0"?>
<package format="2">
  <name>provider_vision</name>
  <version>1.0.0</version>
  <description>The provider_vision package - Point Grey Spinnaker based camera driver</description>

  <author>Abhishek Bajpayee</author>
  <author>Pushyami Kaveti</author>
  <author>Vikrant Shah</author>

  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>

  <license>GPLv3</license>

  <url type="website">http://wiki.ros.org/spinnaker_sdk_camera_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>libunwind-dev</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
</package>
